--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,7 +52,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Game\Script\EnemyController.cs" />
-     <Compile Include="Assets\Game\Script\Player\PlayerMoviment.cs" />
+     <Compile Include="Assets\Game\Script\HurtyEnemy.cs" />
+     <Compile Include="Assets\Game\Script\PlayerController.cs" />
      <Compile Include="Assets\Game\Script\Util\FollowObject.cs" />
      <Compile Include="Assets\Game\Script\Util\TransportBehaviour.cs" />
  <Reference Include="UnityEditor.StandardEvents">
