Remove *.sln gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.userosscache
 *.sln.docstates
 *.bak
+*.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -60,6 +61,7 @@ artifacts/
 *_p.c
 *_i.h
 *.ilk
+*.meta
 *.obj
 *.pch
 *.pdb
