--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Add-Ons\2D Extras\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\GridInformation\Scripts\GridInformation.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\Tiles\Animated Tile\Scripts\AnimatedTile.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\Tiles\Pipeline Tile\Scripts\PipelineTile.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\Tiles\Random Tile\Scripts\RandomTile.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\Tiles\Rule Tile\Scripts\RuleTile.cs" />
+     <Compile Include="Assets\Add-Ons\2D Extras\Tiles\Terrain Tile\Scripts\TerrainTile.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\DestroyOverTime.cs" />
      <Compile Include="Assets\Scripts\EnemyController.cs" />
@@ -62,14 +69,14 @@
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerHealthManager.cs" />
      <Compile Include="Assets\Scripts\PlayerStartPoint.cs" />
-     <Compile Include="Assets\Scripts\PlayerStats.cs" />
      <Compile Include="Assets\Scripts\TransportBehaviour.cs" />
      <Compile Include="Assets\Scripts\UIManager.cs" />
- <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>E:/Meus Documentos/Dev/unity/unity-rpg/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
- </Reference>
+     <None Include="Assets\Add-Ons\2D Extras\Brushes\Tint Brush Smooth\Shaders\TintedTilemap.shader" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>E:/Meus Documentos/Dev/unity/unity-rpg/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.PackageManagerUI.Editor">
+ <HintPath>E:/Meus Documentos/Dev/unity/unity-rpg/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>E:/Arquivos de Programas/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
